--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,6 @@
-click==8.0.4
 Flask==2.0.3
-importlib-metadata==4.8.3
-itsdangerous==2.0.1
-Jinja2==3.0.3
-MarkupSafe==2.0.1
-Pillow==8.4.0
-pypdf2==3.0.1
+gunicorn==20.1.0
+PyPDF2==3.0.1
 reportlab==3.6.8
-typing-extensions==4.1.1
 Werkzeug==2.0.3
-zipp==3.6.0
+Pillow==8.4.0
